HelloUltraviolet/Fixtures/RejectedSource/Patterns/TuplePatternArity/Expected.uv
//! Expected diagnostic metadata for the TuplePatternArity rejected-source specimen.

expectedDiagnostic("E-TYP-1803", "rule.17.Pat-Tuple-R-Arity-Err")
